--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container" style="height: 100px;">
     <div class="header-top">
       <a class="logo" routerLink="/">
-        <img width="60" src="https://salt.tikicdn.com/ts/upload/ae/f5/15/2228f38cf84d1b8451bb49e2c4537081.png" class="img-fluid" alt="">
+        <img width="100" src="http://static.muahoantien.com/uploads/library/logo_requa_vn.png" class="img-fluid" alt="">
       </a>
       <div class="menu-box header-top-item">
         <p class="mb-0"><i class='bx bx-menu fs30'></i></p>
@@ -20,7 +20,7 @@
           <p class="fs11 mb-0">Tài khoản</p>
           <p class="fs13 mb-0">Đăng nhập <i class='bx bxs-down-arrow fs8'></i></p>
         </div>
-        
+
       </div>
       <div class="cart-box header-top-item text-decoration-none">
         <a routerLink="/gio-hang"  class="position-relative mb-0 text-white text-decoration-none">
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-      </div>  
+      </div>
     </div>
     <div class="header-bottom">
       <span></span>
@@ -56,12 +56,12 @@
   </div>
 </section>
 
-<section class="header-sm">
-  <div class="logo-sm">
-    <img class="img-fluid" src="https://salt.tikicdn.com/ts/upload/d4/ca/89/28d85ed27396c1beebad8a3fec18bfe4.png" alt="">
-  </div>
-  <!-- <app-search-box></app-search-box> -->
-  <div class="search-box col-12 mt-2">
-    <input type="text" placeholder="Ban tim gi hom nay?" style="width: 100%;">
-  </div>
-</section>
+<!--<section class="header-sm">-->
+<!--  <div class="logo-sm">-->
+<!--    <img class="img-fluid" src="https://salt.tikicdn.com/ts/upload/d4/ca/89/28d85ed27396c1beebad8a3fec18bfe4.png" alt="">-->
+<!--  </div>-->
+<!--  &lt;!&ndash; <app-search-box></app-search-box> &ndash;&gt;-->
+<!--  <div class="search-box col-12 mt-2">-->
+<!--    <input type="text" placeholder="Ban tim gi hom nay?" style="width: 100%;">-->
+<!--  </div>-->
+<!--</section>-->
