--- a/src/app/components/product/prod-item/prod-item.component.scss
+++ b/src/app/components/product/prod-item/prod-item.component.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    margin: auto;
 }
 
 .product-item{
@@ -88,8 +89,8 @@
     }
 
     .product-thumb{
-        width: 120px;
-        height: 120px;
+        width: 100%;
+        height: 200px;
     }
 
     .product-item .card-body{
@@ -102,8 +103,8 @@
         grid-template-columns: repeat(10, 45%);
     }
     .product-thumb{
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        height: 200px;
     }
 }
 
