them phan goi y hom nay tren trang chu

--- a/src/app/components/product-description/product-description.component.html
+++ b/src/app/components/product-description/product-description.component.html
@@ -1,134 +1,4 @@
-<div>Model : BJX V24M9<br>
-  Kích thước : 23.8 inch<br>
-  Tấm nền : SAMSUNG PLS - IPS technology<br>
-  Độ phân giải : Full HD 1920*1080<br>
-  Tỷ lệ khung hình  : 16:9<br>
-  Tần số quét : 75HZ<br>
-  Cổng giao tiếp	: HDMI, VGA, AUDIO<br>
-  Nguồn vào : 12V/2.5A<h5><span style="font-size: 15pt; color: #ff0000;"><strong>ĐẶC ĐIỂM NỔI BẬT</strong></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Thương hiệu cao cấp đến từ&nbsp;<span style="color: #ff0000;"><strong>Mỹ</strong></span></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Sử dụng tấm nền cao cấp&nbsp;<span style="color: #ff0000;"><strong>Samsung PLS - IPS technology</strong></span></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Tần số quét&nbsp;<span style="color: #ff0000;"><strong>75Hz</strong></span>&nbsp;, độ phân giải&nbsp;<span style="color: #ff0000;"><strong>Full HD 1920x1080</strong></span></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Hỗ trợ bộ lọc màu, lọc ánh sáng xanh bảo vệ mắt</span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Thiết kế siêu mỏng -&nbsp;<span style="color: #ff0000;"><strong>Ultra-Thin</strong></span></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Viền màn hình siêu mỏng -&nbsp;<span style="color: #ff0000;"><strong>SLIM BEZEL</strong></span></span></h5>
-  <h5><span style="font-size: 15pt;">️&nbsp;Góc nhìn rộng lên đến&nbsp;<span style="color: #ff0000;"><strong>178 độ</strong></span></span></h5>
-  <p><img src="https://salt.tikicdn.com/cache/w750/ts/product/f6/44/b2/2b8dedf3e4930aac184845a3ee79fdac.jpg" width="750" height="421"></p>
-  <p><em>Màn hình BJX V24M9 được ưa chuộng tại thị trường Châu Âu và Châu Mỹ , màn hình BJX V24M9 đảm bảo được chất lượng công việc và sức khỏe khi sử dụng.</em></p>
-  <p><img src="https://salt.tikicdn.com/cache/w750/ts/product/c4/f4/7a/9b0a0db33729ab90d1fe48d40a927833.jpg" width="750" height="499"></p>
-  <p><em>Thiết kế Slim Benzen giúp độ dày của màn hình BJX V24M9&nbsp;</em></p>
-  <p><img src="https://salt.tikicdn.com/cache/w750/ts/product/fb/7f/39/82aa66c46d742fdb3aaa09ab3ffe9651.jpg" width="750" height="499"></p>
-  <p><em>Thiết kế Thin Border giúp tối ưu hóa viền màn hình khiến&nbsp;BJX V24M9 trở nên sang trọng hơn , tinh tế hơn&nbsp;</em></p>
-  <p><img src="https://salt.tikicdn.com/cache/w750/ts/product/9e/6e/26/5be97e48de2c94a84fbf0ffe3f404b9b.jpg" width="750" height="499"></p>
-  <p><em>Các cổng kết nối HDMI, VGA, Audio trên màn hình&nbsp;BJX V24M9 giúp bạn kết nối tiện lợi hơn&nbsp;</em></p>
-  <p>&nbsp;</p>
-  <p><span style="font-size: 15pt; color: #ff0000;"><strong>THÔNG SỐ KỸ THUẬT</strong></span></p>
-  <table style="width: 50.1908%; height: 722px;" width="100%" cellpadding="10">
-  <tbody>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;" width="177"><span style="font-size: 15pt;">Model</span></td>
-  <td style="width: 29.2621%; height: 26px;" width="341"><span style="font-size: 15pt;">BJX V24M9</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Kích thước</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">23.8 inch</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Màu sắc</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">Black</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Tấm nền</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">SAMSUNG PLS - IPS technology</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Độ phân giải</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">Full HD 1920*1080</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Tỷ lệ khung hình&nbsp;</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">16:9</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Tần số quét</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">75HZ</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Vesa mount</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">100*100mm</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Điện năng tiêu thụ chờ</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">=&lt;&nbsp; 0.5W</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Cổng giao tiếp</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">HDMI, VGA, AUDIO</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Bộ lọc màu</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">Lọc ánh sáng xanh</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Kích thước hiển thị</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">527.04(H)*296.46(V)</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Đèn nền</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">E-LED</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Độ tương phản</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">TYP3000:1</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Số màu</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">16.7M</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Nguồn vào</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">12V/2.5A</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Loại cấp nguồn</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">Adapter</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Điện năng tiêu thụ đầu vào&nbsp;</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">22W&nbsp; Typical, 28W Max</span></td>
-  </tr>
-  <tr style="height: 52px;">
-  <td style="width: 20.4198%; height: 52px;"><span style="font-size: 15pt;">Chế độ báo</span></td>
-  <td style="width: 29.2621%; height: 52px;" width="341"><span style="font-size: 15pt;">Power on : Blue (LED)</span><br><span style="font-size: 15pt;">Power saving : Blue Flicker (LED)</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Kích thước tổng thể</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">541.6*417.6*207.33</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Kích thước màn hình</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">541.6*319.1*207.33</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Kích thước hộp</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">609*113*398mm</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Trọng lượng màn hình</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">2.6KG</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Trọng lượng đóng gói</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">3.64KG</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Nhiệt độ bảo quản</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">-20ºC~60ºC</span></td>
-  </tr>
-  <tr style="height: 26px;">
-  <td style="width: 20.4198%; height: 26px;"><span style="font-size: 15pt;">Nhiệt độ hoạt động</span></td>
-  <td style="width: 29.2621%; height: 26px;"><span style="font-size: 15pt;">0ºC~40ºC</span></td>
-  </tr>
-  </tbody>
-  </table><p>Giá sản phẩm trên Tiki đã bao gồm thuế theo luật hiện hành. Tuy nhiên tuỳ vào từng loại sản phẩm hoặc phương thức, địa chỉ giao hàng mà có thể phát sinh thêm chi phí khác như phí vận chuyển, phụ phí hàng cồng kềnh, ...</p>
+<div *ngIf="description !== ''" [innerHTML]="description"></div>
+<div *ngIf="description == ''" class="text-muted">
+  Hiện chưa có thông tin mô tả sản phẩm
 </div>
