--- a/src/app/containers/shopping-cart/shopping-cart.component.scss
+++ b/src/app/containers/shopping-cart/shopping-cart.component.scss
@@ -22,6 +22,15 @@
     margin: auto;
     width: 170px;
 }
+.product-gift{
+    padding: 0 100px;
+    margin-top: 30px;
+}
+.product-gift img{
+    width: 50px;
+    display: inline-block;
+    margin-right: 8px;
+}
 
 @media (max-width: 768px) {
     .product-content-price{
