--- a/src/app/components/product/prod-item/prod-item.component.scss
+++ b/src/app/components/product/prod-item/prod-item.component.scss
@@ -92,7 +92,7 @@
     }
     .product-thumb{
         width: 100%;
-        height: auto;
+        height: 200px;
     }
 
     .product-item{
@@ -104,9 +104,6 @@
     }
 }
 
-@media (max-width: 992px) {
-
-}
 
 @media (max-width: 768px) {
     .product-list{
@@ -134,8 +131,21 @@
         grid-template-columns: repeat(10, 45%);
     }
     .product-thumb{
-        width: 100%;
-        height: 200px;
+        width: 150px;
+        height: 150px;
+    }
+    .gift{
+        width: 70%;
+        height: 25px;
+    }
+
+    .gift .gift-thumb{
+        width: 20px;
+        height: 20px;
+    }
+    
+    .gift span{
+        font-size: 10px;
     }
 }
 
