--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,12 @@
+html, body {
+    height: 100%;
+}
+
+
 .content{
     background-color: #F4F4F4;
     padding: 18px 0 5px;
-    height: auto;
+    height: 100%;
 }
 
 .container{
