--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -68,6 +68,15 @@
     position: relative;
 }
 
+.cart-quatity-sm{
+    position: absolute;
+    border-radius: 50%;
+    padding: 0 5px;
+    left: 20px;
+    color: #000;
+    font-size: 11px;
+}
+
 .dropNotifyCart{
     width: 300px;
 }
