--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
-<div class="content">
-    <div class="container">
+<div [ngClass]="auth_form ? '' : 'content'">
+    <div [ngClass]="auth_form ? '' : 'container'">
         <router-outlet></router-outlet>
     </div>
 </div>
-
